# laundry

./: .dockerignore  .gitignore  1.py  2.py  Dockerfile  Dockerfile copy  docker-compose copy.yml  docker-compose.yml  imports.txt  kunle.html  migrate_remote_to_local copy.ps1  migrate_remote_to_local.ps1  migrate_specific.py  migrate_to_postgres.py  migrate_to_two_targets.ps1  notes  orm_migrate.py  out.txt  pg_migrate.py  pyproject.toml  requirements copy.txt  requirements.txt  requirementsv2.txt  resilient_migrate.py  states_towns.json  test_email.py
customer/: models.py
customer/migrations/: 0001_initial.py
myapp/: 1.py  2.py  adapter.py  admin copy.py  admin.py  apps.py  context_processors.py  forms.py  landing_models.py  managers.py  middleware.py  models copy.py  models.py  signals.py  tasks.py  tenant_admin_views.py  tenant_middleware.py  urls copy.py  urls.py  utils.py  views copy 2.py  views copy 3.py  views copy.py  views copy`1.py  views.py
myapp/migrations/: 0001_initial.py  0002_alter_customuser_options_remove_customuser_address_and_more.py  0002_alter_order_id_order1.py  0002_alter_service_service_type_and_more.py  0002_category_remove_laundryitem_current_stage_and_more.py  0003_laundryitem_color.py  0003_tenant_comment_tenant_order_tenant_orderitem_tenant_and_more.py  0004_alter_service_category.py  0004_alter_tenant_subdomain.py  0005_alter_tenant_subdomain.py  (+40 more)
myproject/: celery.py  email_backend.py  settings.py  urls.py  views.py
scratch/: check_states.py  check_tenant_config.py  check_user.py  trigger_test_email.py
templates/: base.html
(+130 files in other folders)
